--- a/src/main/resources/templates/urlForm.html
+++ b/src/main/resources/templates/urlForm.html
@@ -12,6 +12,10 @@
             <label for="longUrl">Введите длинный URL:</label>
             <input type="text" id="longUrl" name="longUrl" class="form-control" required>
         </div>
+        <div class="form-group">
+            <label for="expirationMinutes">Срок действия (в минутах):</label>
+            <input type="number" id="expirationMinutes" name="expirationMinutes" class="form-control" min="1" value="60" required>
+        </div>
         <button type="submit" class="btn btn-primary">Сократить</button>
     </form>
 </div>
